<?xml version="1.0" encoding="utf-8"?>
<!--
 This is a file from P1R4T3B0X, a program that lets you share files with everyone.
 Copyright (C) 2012 by Aylatan
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.
 
 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.
 
 The GNU General Public License can be found at http://www.gnu.org/licenses.

-->

<resources>

    <!-- General -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="settings">Settings</string>
    <string name="other">Other</string>
    <string name="current">Current:</string>
    <string name="validate">Validate</string>
    <string name="create">Create</string>
    <string name="help">Help</string>
    <string name="close">Close</string>
    <string name="confirm_title">Confirmation</string>
    <string name="none">None</string>
    <string name="silent">Silent</string>

    <!-- Service -->
    <string name="notification_network_title">P1R4T3B0X network found!</string>
    <string name="notification_network">A P1R4T3B0X network has been found around you!</string>

    <!-- Main activity -->
    <string name="app_name">P1R4T3B0X</string>
    <string name="stat_title">General statistics</string>
    <string name="uptime">Uptime:</string>
    <string name="filesdl"># files downloaded:</string>
    <string name="topdl_title">Top 5 downloaded files</string>
    <string name="status">Current state</string>
    <string name="system_state_off">Off</string>
    <string name="system_state_waiting">Online</string>
    <string name="system_state_sending">Sending…</string>
    <string name="not_running">Not running</string>
    <string name="restart_server">You have to restart the server for changes to be applied.</string>

    <!-- Widget -->
    <string name="widget_name">P1R4T3B0X Widget</string>

    <!-- Settings Activity -->
    <string name="settings_set_dir">Set shared folder</string>
    <string name="settings_notification">Notification</string>
    <string name="settings_notification_summary">Notify when P1R4T3B0X network found</string>
    <string name="settings_low_bat_title">Check battery</string>
    <string name="settings_low_bat_summary_on">Turn off when battery is low</string>
    <string name="settings_low_bat_summary_off">Keep running when battery is low</string>
    <string name="settings_reset_stats">Reset statistics</string>
    <string name="settings_help">Help</string>
    <string name="settings_beer">Buy me a beer!</string>
    <string name="settings_beer_shooter">Buy me a shooter!</string>
    <string name="settings_beer_large">Buy me a large beer!</string>
    <string name="settings_beer_barrel">Buy me a beer barrel!</string>
    <string name="settings_notification_frequency">Check frequency</string>
    <string name="settings_notification_frequency_dialog">Set check frequency (low value uses more battery)</string>
    <string name="settings_notification_vibrate">Vibrate</string>
    <string name="settings_notification_ringtone">Select ringtone</string>

    <string-array name="notification_frequency_readable">
        <item>1 min</item>
        <item>5 min</item>
        <item>10 min</item>
        <item>30 min</item>
        <item>1 hr</item>
    </string-array>
    <string-array name="notification_frequency">
        <item>60</item>
        <item>300</item>
        <item>600</item>
        <item>1800</item>
        <item>3600</item>
    </string-array>
    <string name="notification_default_frequency">600</string>
    
    <string name="help_content">
        This application is made to allow you to share files with anyone.\n
        \n
        One the home screen you can start and stop the system.\n
        You can see the current state of the system, which can be "Off", "Online" or "Sending".\n
        You can see statistics about the number of files that has been downloaded from your phone and the time from which the system is on.\n
        \n
        From the settings menu, you can specify the shared folder, set a notification for a P1R4T3B0X network found around you,
        set whether or not the system should turn off when the battery is low, reset all the statistics, see this message and support the development by buying me a beer.\n
        \n
        You can add a widget to your desktop.\n
        The widget will show the current state of the system via its icon.\n
        A click on the widget will switch the system on or off.\n
        \n
        If you like this application, consider buying me a beer.    </string>
    <string name="reset_confirm">Are you sure you want to reset all statistic data ?</string>
    <string name="reset_done">All statistics reset.</string>
    <string name="thank_you">Thank you for your support! I will think of you while drinking ;)</string>

    <!-- Choose folder -->
    <string name="new_folder">New folder</string>
    <string name="new_folder_dialog">Type the name of the folder you want to create:</string>

    <!-- Error messages -->
    <string name="error_during_payment">There was an error during the payment. Please try again.</string>
    <string name="error_no_root">Root application does not seems to be installed, the PirateBox will not be able to start.</string>
    <string name="error_script_loading">The redirection script failed to load and therefore there will be no redirection of incoming traffic.</string>
    <string name="error_creating_folder">Could not create the requested folder.</string>
    <string name="error_ap_start">The Wifi access point could not be started.</string>
    <string name="error_ap_stop">The Wifi access point could not be stopped.</string>
    <string name="error_network_scan">The Wifi network scan failed.</string>
</resources>