<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <Preference
        android:key="select_dir"
        android:persistent="true"
        android:summary=""
        android:title="@string/settings_set_dir" />

    <PreferenceScreen android:title="@string/settings_notification" >
        <CheckBoxPreference
            android:key="notification"
            android:persistent="true"
            android:summary="@string/settings_notification_summary"
            android:title="@string/settings_notification" />

        <ListPreference
            android:dialogTitle="@string/settings_notification_frequency_dialog"
            android:entries="@array/notification_frequency_readable"
            android:entryValues="@array/notification_frequency"
            android:key="notification_frequency"
            android:persistent="true"
            android:title="@string/settings_notification_frequency" />

        <CheckBoxPreference
            android:key="notification_vibrate"
            android:persistent="true"
            android:title="@string/settings_notification_vibrate" />

        <RingtonePreference
            android:key="notification_ringtone"
            android:persistent="true"
            android:ringtoneType="notification"
            android:showSilent="true"
            android:title="@string/settings_notification_ringtone" />
    </PreferenceScreen>

    <ListPreference
        android:dialogTitle="@string/settings_low_bat_dialog"
        android:entries="@array/battery_threshold_readable"
        android:entryValues="@array/battery_threshold"
        android:key="low_bat"
        android:persistent="true"
        android:title="@string/settings_low_bat" />

    <Preference
        android:key="reset_stat"
        android:title="@string/settings_reset_stats" />

    <PreferenceCategory android:title="@string/other" >
        <Preference
            android:key="help"
            android:title="@string/settings_help" />
        <Preference
            android:key="beer"
            android:title="@string/settings_beer" />
    </PreferenceCategory>

</PreferenceScreen>