<?xml version="1.0" encoding="utf-8"?>
<!--
 This is a file from P1R4T3B0X, a program that lets you share files with everyone.
 Copyright (C) 2012 by Aylatan
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.
 
 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.
 
 The GNU General Public License can be found at http://www.gnu.org/licenses.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/uptime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uptime" />

    <TextView
        android:id="@+id/uptime_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/uptime"
        android:layout_toRightOf="@id/uptime" />

    <TextView
        android:id="@+id/filesdl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/uptime"
        android:layout_below="@id/uptime"
        android:text="@string/filesdl" />

    <TextView
        android:id="@+id/filesdl_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/filesdl"
        android:layout_toRightOf="@id/filesdl" />

    <TextView
        android:id="@+id/topdl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/filesdl"
        android:layout_below="@id/filesdl"
        android:text="@string/topdl" />

    <TextView
        android:id="@+id/topdl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/topdl"
        android:layout_below="@id/topdl" />

    <TextView
        android:id="@+id/topdl2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/topdl"
        android:layout_below="@id/topdl1" />

    <TextView
        android:id="@+id/topdl3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/topdl"
        android:layout_below="@id/topdl2" />

    <TextView
        android:id="@+id/topdl4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/topdl"
        android:layout_below="@id/topdl3" />

    <TextView
        android:id="@+id/topdl5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/topdl"
        android:layout_below="@id/topdl4" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/topdl"
        android:layout_below="@id/topdl5"
        android:text="@string/status" />

    <TextView
        android:id="@+id/status_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/status"
        android:layout_toRightOf="@id/status" />

    <Button
        android:id="@+id/startStopBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:paddingBottom="30dip"
        android:paddingTop="30dip"
        android:text="@string/start" />

</RelativeLayout>